--- a/src/main/resources/dark.css
+++ b/src/main/resources/dark.css
@@ -153,3 +153,23 @@
 .progress-bar .bar {
     -fx-background-radius: 8;
 }
+
+/* Dialog / Alert */
+
+.dialog-pane {
+    -fx-background-color: #1e1e1e;
+}
+
+.dialog-pane .label {
+    -fx-text-fill: #e6e6e6;
+}
+
+.dialog-pane .button {
+    -fx-background-color: #2b2b2b;
+    -fx-text-fill: #e6e6e6;
+    -fx-background-radius: 8;
+}
+
+.dialog-pane .button:hover {
+    -fx-background-color: #343434;
+}
